# zvecrs

./: .gitignore  Cargo.toml  README.md  zvec-integration.md
docs/: BUILD.md
gen-bindings/: Cargo.toml
gen-bindings/src/: main.rs
scripts/: Dockerfile.artifacts  coverage.sh  make-prebuilt.sh
zvec/: Cargo.toml
zvec-bindings/: Cargo.toml  README.md
zvec-bindings/examples/: basic.rs  crud.rs  indexes.rs  search.rs  sparse.rs
zvec-bindings/src/: collection.rs  doc.rs  error.rs  lib.rs  query.rs
zvec-bindings/tests/: coverage_tests.rs  integration_test.rs
zvec-c-wrapper/: CMakeLists.txt
zvec-c-wrapper/include/: zvec_c.h  zvec_c_internal.h
zvec-c-wrapper/src/: collection.cpp  doc.cpp  index_params.cpp  init.cpp  options.cpp  query.cpp  schema.cpp  status.cpp
zvec-sys/: Cargo.toml  build.rs  wrapper.h
zvec-sys/zvec-c-wrapper/include/: zvec_c_internal.h
zvec-sys/zvec-c-wrapper/src/: collection.cpp  doc.cpp
zvec/examples/: basic.rs  crud.rs  indexes.rs  search.rs  sparse.rs
zvec/src/: collection.rs  doc.rs  lib.rs  query.rs  schema.rs  sync.rs  types.rs
zvec/tests/: coverage_tests.rs  integration_test.rs
