[workspace]
members = ["zvec-sys", "zvec-bindings"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/igobypenn/zvec-rust-binding"
description = "Rust bindings for zvec vector database"
keywords = ["vector", "database", "search", "embedding", "similarity"]
categories = ["database", "science"]

[workspace.dependencies]
zvec-sys = { path = "zvec-sys" }
thiserror = "1.0"
